Agrego archivos de bootstrap y barra de navegación

--- a/index.html
+++ b/index.html
@@ -1,16 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum</title>
+
+    <!-- Estilos de Bootstrap -->
+
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
+    <!-- Hola de estilos propios -->
+    <link rel="stylesheet" href="./assets/css/styles.css">
+
+    <!-- Iconos -->
+
+    <script src="https://kit.fontawesome.com/949e6d5ef8.js" crossorigin="anonymous"></script>
+
+
+
 </head>
 
-<body>
+<body class="bg-dark">
+
+    <head>
+        <nav class="navbar navbar-expand-lg bg-danger ">
+            <div class="container-fluid px-2em">
+                <a class="navbar-brand text-white fs-3" href="#">Curriculum</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link text-white fs-5" href="#">Inicio</a>
+                        <a class="nav-link text-white fs-5" href="#">Portafolio</a>
+                        <a class="nav-link text-white fs-5" href="#">Commit</a>
+                        <a class="nav-link text-white fs-5" href="#">Contacto</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </head>
+
+    <main class="container text-white">
+        <h1 class="text-center">Curriculum Vitae</h1>
+        <section>
+            <h2> Información Personal</h2>
+
+
+
+            <div>
+
+                <ul class="list-group list-group-horizontal bg-dark">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                </ul>
+                <ul class="list-group list-group-horizontal-sm">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                </ul>
+                <ul class="list-group list-group-horizontal-md">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                </ul>
+                <ul class="list-group list-group-horizontal-lg">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                </ul>
+                <ul class="list-group list-group-horizontal-xl">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                </ul>
+                <ul class="list-group list-group-horizontal-xxl">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                </ul>
+
+            </div>
+
+        </section>
+
+
+    </main>
     <h1>Hola</h1>
     <p>Este es mi primer párrafo</p>
     <p>Modificación tutoría 07/11/2024</p>
+
+
+
+
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+
 
 </body>
 
