Agrego sección Acerca de mi en mi curriculum

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <div class="navbar-nav">
                         <a class="nav-link text-white fs-5" href="#">Inicio</a>
                         <a class="nav-link text-white fs-5" href="#">Portafolio</a>
@@ -42,43 +42,76 @@
                 </div>
             </div>
         </nav>
+
+
     </head>
 
-    <main class="container text-white">
-        <h1 class="text-center">Curriculum Vitae</h1>
-        <section>
-            <h2> Información Personal</h2>
+    <main class="container py-5">
+        <!-- <h1 class="text-center py-3 text-white">Curriculum Vitae</h1> -->
+        <section class="d-flex">
 
+            <div class="container bg-secondary rounded-start-4 text-white" style="max-width: 30%;">
+                <div class="d-flex flex-column align-items-center text-center">
+                    <img class="foto" src="./assets/img/foto.png" alt="">
+                    <br>
+                    <b class="fs-3">Christopher Morales H.</b>
+                    <br>
+                    <p class="fs-4">Ingeniero en Control e Instrumentación Industrial</p>
 
+                </div>
 
-            <div>
-
-                <ul class="list-group list-group-horizontal bg-dark">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                </ul>
-                <ul class="list-group list-group-horizontal-sm">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                </ul>
-                <ul class="list-group list-group-horizontal-md">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                </ul>
-                <ul class="list-group list-group-horizontal-lg">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                </ul>
-                <ul class="list-group list-group-horizontal-xl">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                </ul>
-                <ul class="list-group list-group-horizontal-xxl">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                </ul>
 
             </div>
+
+            <div class="container bg-white rounded-end-4 p-5" style="max-width: 70%;">
+                <h2 class="text-danger">A cerca de mi</h2>
+
+
+                <p class="text-dark">Ingeniero en Control Industrial con más de 12 años de experiencia en la industria
+                    de la
+                    automatización y control, desempeñándome principalmente en Nautronika. Mi trayectoria profesional se
+                    ha enfocado en el diseño y programación de sistemas de automatización con PLC y software SCADA de
+                    reconocidas marcas como Siemens, Schneider, Delta, Wecon y Mitsubishi. A lo largo de mi carrera, he
+                    adquirido habilidades robustas en la implementación y mantenimiento de soluciones automatizadas que
+                    mejoran la eficiencia y la seguridad operativa.
+                </p>
+
+                <p class="text-dark"> Mi experiencia se extiende al área de control de sistemas de propulsión en
+                    embarcaciones, donde he
+                    desarrollado e implementado sistemas avanzados que optimizan el rendimiento y la fiabilidad de los
+                    motores marinos. Además, poseo una sólida formación en el diseño y fabricación de sistemas de
+                    alarmas, lo que me ha permitido crear soluciones personalizadas que garantizan la protección y la
+                    seguridad en diversas aplicaciones industriales y marítimas.
+                </p>
+
+                <p class="text-dark"> En el ámbito de la generación y sincronismo de sistemas de generación, he
+                    trabajado en la
+                    configuración y ajuste de equipos para asegurar una operación coordinada y eficiente de múltiples
+                    generadores, contribuyendo a la estabilidad y la continuidad del suministro eléctrico en entornos
+                    críticos.
+                </p>
+
+                <p class="text-dark"> Mi expertise incluye el mantenimiento y reparación de equipos de navegación
+                    naval, asegurando la
+                    disponibilidad y precisión de los sistemas de navegación para operaciones seguras y eficientes.
+                    También tengo experiencia en el diseño y desarrollo de sistemas eléctricos de potencia, así como en
+                    la programación de elementos de control eléctricos, lo cual me permite abordar una amplia gama de
+                    desafíos en la gestión y distribución de energía.
+                </p>
+
+                <p class="text-dark"> Mi formación y experiencia me han permitido contribuir de manera significativa al
+                    éxito de
+                    Nautronika, donde he liderado proyectos complejos y he colaborado con equipos multidisciplinarios
+                    para entregar soluciones innovadoras y de alta calidad. Soy un profesional comprometido con el
+                    aprendizaje continuo y la adopción de nuevas tecnologías para mejorar los procesos industriales y
+                    marítimos.</p>
+
+            </div>
+
+
+
+
+
 
         </section>
 
