--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <!-- Estilos de Bootstrap -->
 
-    <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -26,21 +25,29 @@
 <body class="bg-dark">
 
     <head>
-        <nav class="navbar navbar-expand-lg bg-danger ">
+
+        <nav class="navbar navbar-expand-lg bg-danger">
             <div class="container-fluid px-2em">
                 <a class="navbar-brand text-white fs-3" href="#">Curriculum</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <div class="navbar-nav">
-                        <a class="nav-link text-white fs-5" href="#">Inicio</a>
-                        <a class="nav-link text-white fs-5" href="#">Portafolio</a>
-                        <a class="nav-link text-white fs-5" href="#">Commit</a>
-                        <a class="nav-link text-white fs-5" href="#">Contacto</a>
-                    </div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-white fs-5" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fs-5" href="#">Portafolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fs-5" href="#">Commit</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fs-5" href="#">Contacto</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -66,68 +73,204 @@
             </div>
 
             <div class="container bg-white rounded-end-4 p-5" style="max-width: 70%;">
-                <h2 class="text-danger">A cerca de mi</h2>
+
+                <div id="yo">
+                    <h2 class="text-danger">A cerca de mi</h2>
 
 
-                <p class="text-dark">Ingeniero en Control Industrial con más de 12 años de experiencia en la industria
-                    de la
-                    automatización y control, desempeñándome principalmente en Nautronika. Mi trayectoria profesional se
-                    ha enfocado en el diseño y programación de sistemas de automatización con PLC y software SCADA de
-                    reconocidas marcas como Siemens, Schneider, Delta, Wecon y Mitsubishi. A lo largo de mi carrera, he
-                    adquirido habilidades robustas en la implementación y mantenimiento de soluciones automatizadas que
-                    mejoran la eficiencia y la seguridad operativa.
-                </p>
+                    <p class="text-dark">Ingeniero en Control Industrial con más de 12 años de experiencia en la
+                        industria
+                        de la
+                        automatización y control, desempeñándome principalmente en Nautronika. Mi trayectoria
+                        profesional se
+                        ha enfocado en el diseño y programación de sistemas de automatización con PLC y software SCADA
+                        de
+                        reconocidas marcas como Siemens, Schneider, Delta, Wecon y Mitsubishi. A lo largo de mi carrera,
+                        he
+                        adquirido habilidades robustas en la implementación y mantenimiento de soluciones automatizadas
+                        que
+                        mejoran la eficiencia y la seguridad operativa.
+                    </p>
 
-                <p class="text-dark"> Mi experiencia se extiende al área de control de sistemas de propulsión en
-                    embarcaciones, donde he
-                    desarrollado e implementado sistemas avanzados que optimizan el rendimiento y la fiabilidad de los
-                    motores marinos. Además, poseo una sólida formación en el diseño y fabricación de sistemas de
-                    alarmas, lo que me ha permitido crear soluciones personalizadas que garantizan la protección y la
-                    seguridad en diversas aplicaciones industriales y marítimas.
-                </p>
+                    <p class="text-dark"> Mi experiencia se extiende al área de control de sistemas de propulsión en
+                        embarcaciones, donde he
+                        desarrollado e implementado sistemas avanzados que optimizan el rendimiento y la fiabilidad de
+                        los
+                        motores marinos. Además, poseo una sólida formación en el diseño y fabricación de sistemas de
+                        alarmas, lo que me ha permitido crear soluciones personalizadas que garantizan la protección y
+                        la
+                        seguridad en diversas aplicaciones industriales y marítimas.
+                    </p>
 
-                <p class="text-dark"> En el ámbito de la generación y sincronismo de sistemas de generación, he
-                    trabajado en la
-                    configuración y ajuste de equipos para asegurar una operación coordinada y eficiente de múltiples
-                    generadores, contribuyendo a la estabilidad y la continuidad del suministro eléctrico en entornos
-                    críticos.
-                </p>
+                    <p class="text-dark"> En el ámbito de la generación y sincronismo de sistemas de generación, he
+                        trabajado en la
+                        configuración y ajuste de equipos para asegurar una operación coordinada y eficiente de
+                        múltiples
+                        generadores, contribuyendo a la estabilidad y la continuidad del suministro eléctrico en
+                        entornos
+                        críticos.
+                    </p>
 
-                <p class="text-dark"> Mi expertise incluye el mantenimiento y reparación de equipos de navegación
-                    naval, asegurando la
-                    disponibilidad y precisión de los sistemas de navegación para operaciones seguras y eficientes.
-                    También tengo experiencia en el diseño y desarrollo de sistemas eléctricos de potencia, así como en
-                    la programación de elementos de control eléctricos, lo cual me permite abordar una amplia gama de
-                    desafíos en la gestión y distribución de energía.
-                </p>
+                    <p class="text-dark"> Mi expertise incluye el mantenimiento y reparación de equipos de navegación
+                        naval, asegurando la
+                        disponibilidad y precisión de los sistemas de navegación para operaciones seguras y eficientes.
+                        También tengo experiencia en el diseño y desarrollo de sistemas eléctricos de potencia, así como
+                        en
+                        la programación de elementos de control eléctricos, lo cual me permite abordar una amplia gama
+                        de
+                        desafíos en la gestión y distribución de energía.
+                    </p>
 
-                <p class="text-dark"> Mi formación y experiencia me han permitido contribuir de manera significativa al
-                    éxito de
-                    Nautronika, donde he liderado proyectos complejos y he colaborado con equipos multidisciplinarios
-                    para entregar soluciones innovadoras y de alta calidad. Soy un profesional comprometido con el
-                    aprendizaje continuo y la adopción de nuevas tecnologías para mejorar los procesos industriales y
-                    marítimos.</p>
+                    <p class="text-dark"> Mi formación y experiencia me han permitido contribuir de manera significativa
+                        al
+                        éxito de
+                        Nautronika, donde he liderado proyectos complejos y he colaborado con equipos
+                        multidisciplinarios
+                        para entregar soluciones innovadoras y de alta calidad. Soy un profesional comprometido con el
+                        aprendizaje continuo y la adopción de nuevas tecnologías para mejorar los procesos industriales
+                        y
+                        marítimos.</p>
+
+                </div>
+                <br>
+
+
+                <div id="estudios">
+                    <h2 class="text-danger">Información Académica</h2>
+
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Fecha</th>
+                                    <th class="px-2">Institución</th>
+                                    <th>Especialidad</th>
+                                </tr>
+
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>2007-2010</th>
+                                    <td class="px-2">Liceo Mauricio Hoschild del CEAT </th>
+                                    <td>Técnico de nivel medio en electrónica</th>
+                                </tr>
+                                <tr>
+                                    <td>2011-2014</th>
+                                    <td class="px-2">DUOC UC</th>
+                                    <td>Técnico de nivel superior en electricidad y electrónica</th>
+                                </tr>
+                                <tr>
+                                    <td>2016-2018</th>
+                                    <td class="px-2">Universidad Técnica Federico Santa María</th>
+                                    <td>Ingeniero en Control e Instrumentación Industrial</th>
+                                </tr>
+                                <tr>
+                                    <td>2024</th>
+                                    <td class="px-2">Pontificia Universidad Católica de Chile</th>
+                                    <td>Diplomado en Automática e Informática Industrial</th>
+                                </tr>
+
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+                <br>
+
+                <div id="trabajos">
+                    <h2 class="text-danger">Experiencia Laboral</h2>
+
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Fecha</th>
+                                    <th class="px-2">Institución</th>
+                                    <th>Descripción del cargo</th>
+                                </tr>
+
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>2009-2010</th>
+                                    <td class="px-2">Soprole S.A. </th>
+                                    <td>Asistente de bodega, encargado de ordenar y seleccionar productos, además de
+                                        revisar estado de pallets</th>
+                                </tr>
+                                <tr>
+                                    <td>2010-2011</th>
+                                    <td class="px-2">Pesquera el golgo S.A.</th>
+                                    <td>Práctica profecional técnico electrónico</th>
+                                </tr>
+                                <tr>
+                                    <td>2012-Actualidad</th>
+                                    <td class="px-2">Nautronika E.I.R.L.</th>
+                                    <td>Inicio como técnico electrónico, durante el paso de los años he adquirido nuevas
+                                        responsabilidades como técnico de nivel superior en electricidad y electrónica.
+                                        Actualmente desempeño como Ingeniero de Control Industrial.</th>
+                                </tr>
+
+
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+
+                <br>
+
+                <div id="muestras">
+                    <h2 class="text-danger"> Trabajos realizados</h2>
+                    <br>
+                    <div>
+
+                        <div id="carouselExampleAutoplaying" class="carousel slide rounded-start-4"
+                            data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="./assets/img/t_1.png" class="d-block w-100" alt="Sistema de Alarmas 1">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/img/t_2.png" class="d-block w-100" alt="Sistema de Alarmas 1">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/img/t_3.png" class="d-block w-100" alt="Propulsión">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/img/t_4.jpg" class="d-block w-100" alt="Consumo">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
-
-
-
-
-
 
         </section>
 
 
     </main>
-    <h1>Hola</h1>
-    <p>Este es mi primer párrafo</p>
-    <p>Modificación tutoría 07/11/2024</p>
-    <p>Ivan estuvo aqui</p>
+
+    <footer>
+        <div class="container-fluid bg-danger d-flex justify-content-center">
+            <p class="py-4 my-0 fs-4 text-white">Christopher Morales Herrera 2024</p>
+        </div>
+
+    </footer>
 
 
 
-
-    <!-- <script src="assets/js/bootstrap.bundle.min.js"></script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
