--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white fs-5" href="#">Inicio</a>
+                            <a class="nav-link text-white fs-5" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white fs-5" href="#">Portafolio</a>
+                            <a class="nav-link text-white fs-5" href="./portafolio.html">Portafolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white fs-5" href="#">Commit</a>
+                            <a class="nav-link text-white fs-5" href="./commit.html">Commit</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white fs-5" href="#">Contacto</a>
+                            <a class="nav-link text-white fs-5" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
