Arreglo error en dirección de página contacto

--- a/commit.html
+++ b/commit.html
@@ -44,7 +44,7 @@
                         <a class="nav-link text-white fs-5" href="./commit.html">Commit</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fs-5" href="./Contacto.html">Contacto</a>
+                        <a class="nav-link text-white fs-5" href="./contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
