cambio colores a navbar y títulos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <head>
 
-        <nav class="navbar navbar-expand-lg bg-danger">
+        <nav class="navbar navbar-expand-lg bg-danger bg-gradient">
             <div class="container-fluid px-2em">
                 <a class="navbar-brand text-white fs-3" href="#">Curriculum</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -75,7 +75,7 @@
             <div class="container bg-white rounded-end-4 p-5" style="max-width: 70%;">
 
                 <div id="yo">
-                    <h2 class="text-danger">A cerca de mi</h2>
+                    <h2 class="text-success">A cerca de mi</h2>
 
 
                     <p class="text-dark">Ingeniero en Control Industrial con más de 12 años de experiencia en la
@@ -136,7 +136,7 @@
 
 
                 <div id="estudios">
-                    <h2 class="text-danger">Información Académica</h2>
+                    <h2 class="text-success">Información Académica</h2>
 
                     <div class="table-responsive">
                         <table class="table">
@@ -178,7 +178,7 @@
                 <br>
 
                 <div id="trabajos">
-                    <h2 class="text-danger">Experiencia Laboral</h2>
+                    <h2 class="text-success">Experiencia Laboral</h2>
 
                     <div class="table-responsive">
                         <table class="table">
@@ -220,7 +220,7 @@
                 <br>
 
                 <div id="muestras">
-                    <h2 class="text-danger"> Trabajos realizados</h2>
+                    <h2 class="text-success"> Trabajos realizados</h2>
                     <br>
                     <div>
 
@@ -263,7 +263,7 @@
     </main>
 
     <footer>
-        <div class="container-fluid bg-danger d-flex justify-content-center">
+        <div class="container-fluid bg-danger bg-gradient d-flex justify-content-center">
             <p class="py-4 my-0 fs-4 text-white">Christopher Morales Herrera 2024</p>
         </div>
 
