--- a/portafolio.html
+++ b/portafolio.html
@@ -25,7 +25,7 @@
 
 <body class="bg-dark">
 
-    <nav class="navbar navbar-expand-lg bg-danger">
+    <nav class="navbar navbar-expand-lg bg-danger bg-gradient">
         <div class="container-fluid px-2em">
             <a class="navbar-brand text-white fs-3" href="#">Curriculum</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -70,7 +70,7 @@
 
             <div class="container bg-white rounded-end-4 p-5" style="max-width: 70%;">
 
-                <h2 class="text-danger mb-3"> Portafolio</h2>
+                <h2 class="text-success mb-3"> Portafolio</h2>
 
                 <div class="row gx-5 gy-5 mb-4">
                     <div class="col">
@@ -179,7 +179,7 @@
 
 
     <footer>
-        <div class="container-fluid bg-danger d-flex justify-content-center">
+        <div class="container-fluid bg-danger bg-gradient d-flex justify-content-center">
             <p class="py-4 my-0 fs-4 text-white">Christopher Morales Herrera 2024</p>
         </div>
 
