--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
 
 <body class="bg-dark">
 
-    <nav class="navbar navbar-expand-lg bg-danger">
+    <nav class="navbar navbar-expand-lg bg-danger bg-gradient">
         <div class="container-fluid px-2em">
             <a class="navbar-brand text-white fs-3" href="#">Curriculum</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -122,7 +122,7 @@
 
 
     <footer>
-        <div class="container-fluid bg-danger d-flex justify-content-center">
+        <div class="container-fluid bg-danger bg-gradient d-flex justify-content-center">
             <p class="py-4 my-0 fs-4 text-white">Christopher Morales Herrera 2024</p>
         </div>
 
