--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="container bg-secondary rounded-start-4 text-white" style="max-width: 30%;">
                 <div class="d-flex flex-column align-items-center text-center">
-                    <img class="foto" src="./assets/img/foto.png" alt="">
+                    <img class="foto" src="./assets/img/foto.jpg" alt="">
                     <br>
                     <b class="fs-3">Christopher Morales H.</b>
                     <br>
