Agregue un parrafo en la seccion 1° Commit

--- a/commit.html
+++ b/commit.html
@@ -74,6 +74,7 @@
 
                 <div class="">
                     <p class="text-success">1° Commit</p>
+                    <p class="text-success">Hola Christopher, commit para cumplir el desafio grupal. Carmen Castañeda</p>
 
                 </div>
                 <div class="">
