Agregue un parrafo en el 2° commit

--- a/commit.html
+++ b/commit.html
@@ -79,6 +79,7 @@
                 </div>
                 <div class="">
                     <p class="text-danger">2° Commit</p>
+                    <p> Hola Christopher, excelente la estructura que usaste para el portafolio 😃. Cristel</p>
 
                 </div>
                 <div class="">
